--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id "com.matthewprenger.cursegradle" version "1.4.0"
     id "com.github.breadmoirai.github-release" version "2.4.1"
     id "com.modrinth.minotaur" version "2.+"
@@ -77,7 +77,7 @@ if(project.hasProperty('release_type')) {
     curseforge {
         apiKey = System.getenv("CURSEFORGE_API_KEY")
         project {
-            id = '??????'
+            id = System.getenv("CURSEFORGE_PROJECT_ID")
             changelog = changelog_last_section()
             changelogType = 'markdown'
             releaseType = release_type
@@ -86,9 +86,6 @@ if(project.hasProperty('release_type')) {
 
             relations {
                 requiredDependency 'fabric-api'
-                requiredDependency 'azurelib-armor'
-                requiredDependency 'spell-engine'
-                requiredDependency 'projectile-damage-attribute'
             }
 
             mainArtifact(remapJar)
@@ -103,7 +100,7 @@ if(project.hasProperty('release_type')) {
 
     modrinth {
         token = System.getenv("MODRINTH_API_KEY")
-        projectId = "archers" // This can be the project ID or the slug. Either will work!
+        projectId = System.getenv("MODRINTH_PROJECT_ID") // This can be the project ID or the slug. Either will work!
         versionName = "${version}" // You don't need to set this manually. Will fail if Modrinth has this version already
         versionNumber = "${version}" // You don't need to set this manually. Will fail if Modrinth has this version already
         versionType = release_type // This is the default -- can also be `beta` or `alpha`
@@ -116,16 +113,13 @@ if(project.hasProperty('release_type')) {
             // The scope can be `required`, `optional`, `incompatible`, or `embedded`
             // The type can either be `project` or `version`
             required.project 'fabric-api'
-            required.project 'azurelib-armor'
-            required.project 'spell-engine'
-            required.project 'projectile-damage-attribute'
         }
     }
 
     githubRelease {
         token System.getenv("GH_API_KEY") // This is your personal access token with Repo permissions
-        owner "ZsoltMolnarrr" // default is the last part of your group. Eg group: "com.github.breadmoirai" => owner: "breadmoirai"
-        repo "Archers" // by default this is set to your project name
+        owner System.getenv("GH_API_OWNER") // default is the last part of your group. Eg group: "com.github.breadmoirai" => owner: "breadmoirai"
+        repo System.getenv("GH_REPO") // by default this is set to your project name
         tagName "${version}" // by default this is set to "v${project.version}"
         targetCommitish "${project.minecraft_version}" // by default this is set to "main"
         releaseName "Release" // Release title, by default this is the same as the tagName
