--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,24 @@ plugins {
 version = project.mod_version + "+" + project.minecraft_version
 group = project.maven_group
 
+sourceSets {
+    testmod {
+        compileClasspath += main.compileClasspath
+        runtimeClasspath += main.runtimeClasspath
+    }
+}
+
+loom {
+    accessWidenerPath = file("src/main/resources/structure_pool.accesswidener")
+    runs {
+        testmodClient {
+            client()
+            name = "Testmod Client"
+            source sourceSets.testmod
+        }
+    }
+}
+
 dependencies {
     // Game
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -17,10 +35,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
     include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}")))
-}
-
-loom {
-    accessWidenerPath = file("src/main/resources/structure_pool.accesswidener")
+    testmodImplementation sourceSets.main.output
 }
 
 processResources {
