--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,3 +45,4 @@ jobs:
           GH_API_KEY: ${{ secrets.GH_API_KEY }}
           GH_OWNER: ${{ github.repository_owner }}
           GH_REPO: ${{ github.event.repository.name }}
+          GH_BRANCH: ${{ github.head_ref }}
